# codex-repo-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.agents/skill-templates/language-neutral-project/: SKILL.md
.agents/skill-templates/python-uv-project/: SKILL.md
.agents/skills/codex-overlay-maintenance/: SKILL.md
.agents/skills/hello-world-maintenance/: SKILL.md
.agents/skills/repo-debug/: SKILL.md
.agents/skills/repo-feature/: SKILL.md
.agents/skills/repo-plan/: SKILL.md
.agents/skills/repo-release/: SKILL.md
.agents/skills/repo-review/: SKILL.md
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: ci.yml
configs/: default.toml
docs/: architecture.md  code_review.md  development.md  testing.md
docs/decisions/: 0001-template-context-layers.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: README.md
docs/exec-plans/completed/templates/: hello-world-plan.md
docs/exec-plans/templates/: hello-world-plan.md  overlay-plan.md  repo-plan.md
docs/references/: codex-workflow.md  project-customization.md  python-uv-project.md
docs/workflows/: debugging.md  planning.md  release.md
scripts/: bootstrap.sh  dev.sh  lint.sh  preflight.example.py  test.sh  test_affected.sh  typecheck.sh  verify.sh
src/codex_repo_template/: __init__.py  __main__.py  cli.py  config.py
templates/python-uv-agents/: AGENTS.md
tests/: test_cli.py  test_config.py  test_template_contract.py
