[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-repo-template"
version = "0.1.0"
description = "A Codex-ready Python template whose CLI prints hello world."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-hello = "codex_repo_template.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_repo_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
